adding profile pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
        <h1>Test Challenge for 5/1</h1>
        <section>
-           <img src="C:\Users\email\OneDrive\Documents\GitHub\testChallenge\image\profile pic.jpg"
+           <img src="https://github.com/SeanRussell-GitHub/testChallenge/blob/main/bookJacketPicOriginal.jpg"
            width="100" 
            height="auto"/>
 
